# fpbasepy

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/fpbase/: __init__.py  _fetch.py  _graphql.py  models.py
tests/: test_fpbase.py
